RESOLVED FIXED313480
Unified sources build fix
https://bugs.webkit.org/show_bug.cgi?id=313480
Summary Unified sources build fix
Aditya Keerthi
Reported 2026-04-27 13:45:04 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-27 13:45:11 PDT
Aditya Keerthi
Comment 2 2026-04-27 13:47:07 PDT
EWS
Comment 3 2026-04-27 13:49:11 PDT
Committed 312141@main (a405f8c7dbb4): <https://commits.webkit.org/312141@main> Reviewed commits have been landed. Closing PR #63733 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.