Unified sources build fix https://bugs.webkit.org/show_bug.cgi?id=313480 rdar://175703847

Unreviewed build fix.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:

Add missing include.

Canonical link: https://commits.webkit.org/312141@main